Fix bug with iframes on mobile on the winners page

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ ul.years a {
 	list-style: none;
 }
 
+.films iframe {
+	max-width: 100%;
+}
+
 img.header-logo {
 	max-height: 100px;
 }
